<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appearance"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSelectFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rounded_button"
            android:textColor="@color/textPrimary"
            android:text="@string/select_music_folder" />

        <Button
            android:id="@+id/btnImportFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_button"
            android:textColor="@color/textPrimary"
            android:text="@string/import_files" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <Spinner
            android:id="@+id/spinnerLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equalizer"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:layout_marginTop="24dp" />

        <LinearLayout
            android:id="@+id/equalizerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp" />

    </LinearLayout>

</ScrollView>
